--- a/static/styles.css
+++ b/static/styles.css
@@ -1,11 +1,12 @@
 :root {
   --bodyBg: #f0f4f8;
-  --menuBg: #334d68;
+  --menuBg: #2d334a;
   --progressBar: #54dba3;
 }
 
 body {
   background: var(--bodyBg);
+  ;
 }
 
 #menu {
